# serialization

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: linux.yaml  osx.yaml  windows.yaml
benchmarks/: CMakeLists.txt  bench_ks_serialization.cpp  bench_yas_serialization.cpp  serialization_struct.hpp
include/: CMakeLists.txt
include/ks/: serialization.hpp
include/ks/serialization/: archive.hpp  as_bytes.hpp  serialize.hpp  std.hpp
include/ks/serialization/detail/: CMakeLists.txt  serialize_range.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_as_bytes.cpp  test_composition.cpp  test_integer.cpp  test_serialization_array.cpp  test_serialization_composition.cpp  test_serialization_custom.cpp  test_serialization_vector.cpp  test_string.cpp
